[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/iTitus/aoc2025"
license = "MIT"

[dependencies]
anyhow = "1.0"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
indexmap = "2.12"
itertools = "0.14"
lazy_static = "1.5"
nalgebra = "0.34"
num = "0.4"
once_cell = "1.21"
pathfinding = "4.14"
rayon = "1.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2.1"
thiserror = "2.0"
tinyvec = { version = "1.10", features = ["std", "grab_spare_slice", "serde", "rustc_1_61"] }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
codegen-units = 1
lto = true
